Bug 847728 - Fix an intermittent rooting analysis failure; r=sfink